Add user docs and fix order docs
