# controller/user.go
@@ -17,6 +17,16 @@ func NewUserController(userService userServiceIface) *UserController {
 	}
 }
 
+// RegisterUser godoc
+// @Summary Register new user
+// @Description Register new user (TODO: API caller should be a Manager or an Admin)
+// @Tags user
+// @Produce json
+// @Param json body model.User true "These field must be present: username, password, fullname, address, phone, and role_id (1 = Admin; 2 = Manager; 3 = Cashier)"
+// @Success 200 {object} response.ResponseMapper{data=model.User} "Return the new registered user"
+// @Failure 404 {object} response.ResponseMapper{data=string} "Return error with message"
+// @Failure 500 {object} response.ResponseMapper{data=string} "Return error with message"
+// @Router /users/register [post]
 func (c *UserController) RegisterHandler(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	w.Header().Set("Access-Control-Allow-Origin", "*")
@@ -38,6 +48,16 @@ func (c *UserController) RegisterHandler(w http.ResponseWriter, r *http.Request)
 	renderJSONSuccess(w, http.StatusCreated, user, "User created")
 }
 
+// LoginUser godoc
+// @Summary Login user
+// @Description Endpoint for getting the token for the logged in user
+// @Tags user
+// @Produce json
+// @Param json body model.User true "These field must be present: username, password"
+// @Success 200 {object} response.ResponseMapper{data=string} "Return a jwt token to be used for other requests"
+// @Failure 404 {object} response.ResponseMapper{data=string} "Return error with message"
+// @Failure 500 {object} response.ResponseMapper{data=string} "Return error with message"
+// @Router /users/login [post]
 func (c *UserController) LoginHandler(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	w.Header().Set("Access-Control-Allow-Origin", "*")
